[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
]}
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1.40"
eyre = "0.6.12"
tracing-subscriber = { version ="0.3.18", features = ["env-filter"] }
hyper = { version = "0.14", features = ["client", "http1", "server", "tcp"] }
axum = { version = "0.6.18", features = ["ws"] }
serde = { version = "1.0.147", features = ["derive"] }
futures-util = "0.3.28"
http = "0.2.9"
sha1 = "0.10"
async-trait = "0.1.67"
async-tungstenite = { version = "0.22.2", features = ["tokio-native-tls"] }
axum-core = "0.3.4"
base64 = "0.21.0"
tower = { version = "0.4.12", features = ["make"] }
ws_stream_tungstenite = { version = "0.10.0", features = ["tokio_io"] }

tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.4", package = "tlsn-core" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.4", package = "tlsn-verifier", features = [
  "tracing",
] }
