[package]
name = "interactive-networked-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
eyre = "0.6.12"
http = "1.1"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
ws_stream_tungstenite = { version = "0.13", features = ["tokio_io"] }

tlsn = { git = "https://github.com/tlsnotary/tlsn.git", branch = "dev" }
rustls = "0.23"
webpki-roots = "0.26"
